--- a/src/index.scss
+++ b/src/index.scss
@@ -89,7 +89,7 @@ code {
       & input {
         border: none;
         padding-left: 10px;
-        padding: 8px 6px;
+        padding: 8px 10px;
         margin-left: 8px;
 
         &:focus {
@@ -106,191 +106,11 @@ code {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   gap: 18px;
   margin-top: 40px;
-  .card {
-    position: relative;
-    border: 1px solid #F3F3F3;
-    max-width: 322px;
-    height: 360px;
-    border-radius: 15px;
-    transition: box-shadow .2s ease-in-out, transform .2s ease-in-out;
-
-    &-img {
-      max-height: 250px;
-      border-top-left-radius: 15px;
-      border-top-right-radius: 15px;
-      background-position: 100%;
-      overflow: hidden;
-    }
-
-    img {
-      max-width: 100%;
-      object-fit: cover;
-      overflow: hidden;
-    }
-
-    & h5 {
-      margin-top: 14px;
-      padding: 0 10px;
-    }
-
-    & ul {
-      margin: auto;
-      padding: 2px 10px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-
-      & span {
-        font-size: 16px;
-        line-height: 13px;
-        text-transform: uppercase;
-        color: #BDBDBD;
-        margin-right: 10px;
-      }
-    }
-
-    &:hover {
-      box-shadow: 0px 14px 30px rgba(0, 0, 0, 0.05);
-      transform: translateY(-5px);
-    }
-  }
-
-  .favorites-icon {
-    position: absolute;
-    top: 9px;
-    left: 9px;
-    transition: fill .3s, stroke .3s;
-
-    &:hover {
-      fill: pink;  
-      stroke: pink;
-    }
-  }
 }
 
-// ------------------- Main cards icons&buttons -------------------
-
-.plus-btn {
-  border: none;
-  background-color: transparent;
-  margin-right: 10px;
-}
-
-// ------------------- Shopping cart -------------------
-
-.cart {
-  margin-top: 30px;
-  flex: 1;
-
-  &-item {
-    max-width: 325px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border: 1px solid #F3F3F3;
-    border-radius: 20px;
-    margin-bottom: 20px;
-
-    &-left {
-      display: flex;
-
-      & img {
-        border-top-left-radius: 15px;
-        border-bottom-left-radius: 15px;
-      }
-    }
-
-    &-descr {
-      position: relative;
-      top: 10px;
-      left: 10px;
-    }
-
-    .remove-btn {
-      opacity: .6;
-
-      &:hover {
-        opacity: 1;
-      }
-    }
-  }
-
-  &-total-block {
-    li {
-      display: flex;
-      align-items: flex-end;
-      margin-bottom: 20px;
-    }
-
-    div {
-      flex: 1; // будет занимать всю допускаемую ширину
-      height: 1px;
-      border-bottom: 1px dashed #dfdfdf;
-    }
-  }
-}
-
-.overlay-drawer {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1;
-}
-
-.drawer {
-  position: absolute;
-  width: 385px;
-  height: 100%;
-  right: 0px;
-  background: #FFFFFF;
-  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
-  padding: 30px;
-  display: flex;
-  flex-direction: column;
-
-  &-close {
-    display: flex;
-    justify-content: space-between;
-  }
-}
-
-.green-btn {
-  background: #9DD558;
-  padding: 18px 28px;
-  border: none;
-  border-radius: 10px;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 19px;
-  color: #FFFFFF;
-  margin-top: 6px;
-  transition: .1s ease-in-out;
-
-  &:hover {
-    background: lighten(#9dd558, 5%);
-
-    img {
-      transform: translateX(10px);
-    }
-  }
-
-  &:active {
-    background: darken(#9dd558, 5%);
-  }
-
-  & img {
-    position: relative;
-    top: 2px;
-    right: -55px;
-    transition: transform .2s ease-in-out;
-  }
-}
-
-.close-btn {
-  width: 20px;
+.clearInput {
+  width: 12px;
 }
